# geometry_of_spaces

./: .flake8  Readme.md  main.py  pyproject.toml  requirements.txt  upload_geometry.dyn
docs/: test.csv  test.xml
